--- a/gmall-realtime/pom.xml
+++ b/gmall-realtime/pom.xml
@@ -34,6 +34,12 @@
         <artifactId>elasticsearch</artifactId>
         <version>6.6.0</version>
     </dependency>
+
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-to-slf4j</artifactId>
+        <version>2.11.0</version>
+    </dependency>
 </dependencies>
 
 </project>
