--- a/gmall-realtime/src/main/resources/config.properties
+++ b/gmall-realtime/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 # Kafka≈‰÷√
 kafka.broker.list=hadoop201:9092,hadoop202:9092,hadoop203:9092
 # Redis≈‰÷√
-redis.host=hadoop203
+redis.host=myserver
 redis.port=6379
